afternoon at zhaopin

--- a/trunk/app/views/application/_flo_footer.html.erb
+++ b/trunk/app/views/application/_flo_footer.html.erb
@@ -8,19 +8,10 @@
           <a href="/">返回首页</a>
         </li>
         <li>
-          <a href="/tour/">功能简介</a>
-        </li>
-        <li>
-          <a href="/stories/">开发博客</a>
-        </li>
-        <li>
-          <a href="/blog">关于我们</a>
-        </li>
-        <li>
-          <a href="/support">法律声明</a>
+          <a href="/welcome/shuffle">手气不错</a>
         </li>
         <li class="noslash">
-          <a href="/active_admin">团队后台</a>
+          <a href="/welcome/about">关于我们</a>
         </li>
       </ul>
     </div>
