--- a/trunk/app/views/coursewares/new.html.erb
+++ b/trunk/app/views/coursewares/new.html.erb
@@ -5,13 +5,13 @@
     <input id="presentation_uptime" name="presentation[uptime]" type="hidden" value="<%=@uptime%>" />
     <section id="presentation" class="supplimental">
       <div class="wrapper">
-        <div class="primary_info">
+        <div class="primary_info" id="biaozhu_cw" style="display:none">
           <h1>标注课件信息</h1>
 
   <p><label for="presentation_name">所属课程</label> <input class="text" id="presentation_course_long_name" name="presentation[course_long_name]" size="30" type="text" placeholder="例如：[北京师范大学]张英伯:代数学基础"/></p>
   <p><label for="presentation_name">标题</label> <input class="text" id="presentation_title" name="presentation[title]" size="30" type="text" placeholder="例如：复习大纲"/></p>
   <p class="submit">
-      <button class="primary">保存课件详情</button>
+      <button class="primary">保存课件信息</button>
       <span class="button primary cancel">请先完成文件上传</span>
   </p>
 
@@ -42,7 +42,8 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><!-- /steps -->
+    <p id="ok_to_leave" style="display:none">此时已可安全地离开此页面，我们将在后台自动处理您的课件。</p>
   </div>
 
         </div>
@@ -54,6 +55,4 @@
 </div>
 </div>
 
-<div id="sdk_datepicker" class="__sdk">
-</div>
 <%= render 'sdk_footer' %>
