--- a/trunk/app/views/coursewares/show.html.erb
+++ b/trunk/app/views/coursewares/show.html.erb
@@ -4,13 +4,6 @@
     <h1>
       <%if @cws%>第<%=@courseware.courseware_series_no%>集. <%end%>
       <%= @courseware.title %>
-      <%if @topic%>
-        <span style="font-size:16px;text-align:center">
-  
-          领域: <%=link_to @topic.name,tpath(@topic)%>
-
-        </span>
-      <%end%>
       <%if @cws%>
         <span style="font-size:16px;text-align:center">
         (
@@ -40,12 +33,12 @@
           <a href="javascript:void(0)" class="like grey" data-method="post" data-remote="true" rel="nofollow" id="weizuozhefasongganxie">为作者发送感谢</a>
           <a href="#fans" class="likes"><span id="weizuozhefasongganxie2"><%= @courseware.thanks_count %></span> 感谢</a>
         </li>
-        <li class="category">课程 <a href="<%= course_path @courseware.course_id %>"><%= @courseware.course_name %></a></li>
+        <li class="category">课程 <a href="/topics/<%= @courseware.topic_id %>"><%= @courseware.topic %></a></li>
       </ul>
     </div>
     <div class="main" style="width:100%">
         <div class="slide_frame" id="slides_container">
-              <script async="async" class="speakerdeck-embed" data-course-slug="<%=@courseware.course_id%>" data-courseware-slug="<%=@courseware.id%>" data-ratio="<%= @courseware.wh_ratio %>" src="<%=asset_path 'ktv/embed.js'%>" type="text/javascript"></script>
+              <script async="async" class="speakerdeck-embed" data-course-slug="<%=@courseware.topic_id%>" data-courseware-slug="<%=@courseware.id%>" data-ratio="<%= @courseware.wh_ratio %>" src="<%=asset_path 'ktv/embed.js'%>" type="text/javascript"></script>
         </div>
     </div>
     <% else %>
@@ -85,7 +78,7 @@
             <a href="javascript:void(0)" class="like grey" data-method="post" data-remote="true" rel="nofollow" id="weizuozhefasongganxie">为作者发送感谢</a>
             <a href="#fans" class="likes"><span id="weizuozhefasongganxie2"><%= @courseware.thanks_count %></span> 感谢</a>
           </li>
-        <li class="category">课程 <a href="<%= @courseware.course.path %>"><%= @courseware.course_name %></a></li>
+        <li class="category">课程 <a href="/topics/<%= @courseware.topic_path %>"><%= @courseware.topic %></a></li>
         <li class="dianjiliang">点击量 <a href="#watch-view-count"><%= number_with_delimiter @courseware.views_count %> 次</a></li>
               </ul>
 
