--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -34,10 +34,10 @@
   <!--[if (gte IE 6)&(lte IE 8)]>
    <script src="/js/ie1.js" type="text/javascript"></script>
   <![endif]-->
-  <!--[if IE]><link rel="stylesheet" type="text/css" href="<%= asset_path('ie.css') %>" /><![endif]-->
-  <!--[if ie 7]><link href="<%= asset_path('ie7.css') %>" rel="stylesheet" type="text/css" /><![endif]-->
+  <!--[if IE]><link rel="stylesheet" type="text/css" href="<%= asset_path('ktv/ie.css') %>" /><![endif]-->
+  <!--[if ie 7]><link href="<%= asset_path('ktv/ie7.css') %>" rel="stylesheet" type="text/css" /><![endif]-->
   <!--[if IE 6]>
-  <link href="<%= asset_path('ie6.css') %>" rel="stylesheet" type="text/css" />
+  <link href="<%= asset_path('ktv/ie6.css') %>" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="/js/iepngfix.min.js"></script>
   <script type="text/javascript">
   iePngFix.fix('.png');
