--- a/trunk/app/views/application/_flo_footer.html.erb
+++ b/trunk/app/views/application/_flo_footer.html.erb
@@ -10,8 +10,11 @@
         <li>
           <a href="/welcome/shuffle">手气不错</a>
         </li>
-        <li class="noslash">
+        <li>
           <a href="/welcome/about">关于我们</a>
+        </li>
+        <li class="noslash">
+          <a href="/cpanel">后台管理</a>
         </li>
       </ul>
     </div>
