--- a/trunk/app/views/layouts/cpanel.html.erb
+++ b/trunk/app/views/layouts/cpanel.html.erb
@@ -15,7 +15,7 @@
         <% end %>
       </div>
       <div class="app_admin" style="margin-right:15px;">
-        <a href="http://<%= Setting.wendao_domain_name %>/newbie" target="_blank" class="out">返回前台</a>
+        <a href="http://<%= Setting.wendao_domain_name %>/" target="_blank" class="out">返回前台</a>
       </div>
       <div class="app_admin" style="margin-right:50px;">
         <% if current_user %>
