--- a/trunk/app/views/cpanel/users/avatar_admin.html.erb
+++ b/trunk/app/views/cpanel/users/avatar_admin.html.erb
@@ -18,7 +18,7 @@
             <%= image_tag(u.avatar.normal.url,width:100,height:100) %>
           </a>
           <input name="avatars[]" type="checkbox" value="<%=u.id%>" style="width:13px;" class="sub_check">
-          <a href="/users/<%=u.slug%>" target="_blank" style="color:black;" title="<%=u.name%>">
+          <a href="<%=edit_cpanel_user_path u%>" target="_blank" style="color:black;" title="<%=u.name%>">
             <%=truncate2(u.name,:length=>7)%>
           </a>
         </div>
