--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
           <ul id="account-settings">
             <li><a class="user" href="<%= user_path(current_user) %>"><%= avatar_tag(current_user,:small47) %><%= current_user.name %></a>
               <ul>
-                <li><a href="<%= edit_user_registration_path %>">课件管理</a></a>
+                <li><a href="<%= profile_path current_user %>">课件管理</a></a>
                 <li><a href="<%= edit_user_registration_path %>">账号设置</a></a>
                 <li><a href="#" id="Intercom">意见反馈</a></a>
                 <li><a href="<%= logout_path %>">退出</a></li>
@@ -104,19 +104,19 @@
   </header>
   <div id="sdk_flashes">
   <% if !notice.blank? %>
-    <p class="flash notice"><%= notice %></p>
+    <p class="flash notice"><%=raw notice %></p>
     <%= content_for :butt2 do %>
         $("#sdk_flashes .notice").fadeOut().fadeIn();
     <% end %>
   <% end %>
   <% if !alert.blank? %>
-    <p class="flash alert"><%= alert %></p>
+    <p class="flash alert"><%=raw alert %></p>
     <%= content_for :butt2 do %>
         $("#sdk_flashes .alert").fadeOut('fast').fadeIn('fast').fadeOut('fast').fadeIn('fast');
     <% end %>
   <% end %>
   <% if !flash[:insuf_info].blank? %>
-    <p class="flash warning"><%= flash[:insuf_info] %></p>
+    <p class="flash warning"><%=raw flash[:insuf_info] %></p>
     <%= content_for :butt2 do %>
         $("#sdk_flashes .warning").fadeOut('fast').fadeIn('fast').fadeOut('fast').fadeIn('fast');
     <% end %>
