--- a/trunk/app/views/coursewares/embed.js.erb
+++ b/trunk/app/views/coursewares/embed.js.erb
@@ -5,7 +5,7 @@
 <% if params[:container].present? %>
   var iframe = document.createElement('iframe');
   iframe.id = frame_id;
-  iframe.src = "/embed/<%= @courseware.id%>?slide=1";
+  iframe.src = "/embed/<%= @courseware.id%>?slide=1&preview=1";
   var width = document.getElementById('<%=params[:container]%>').offsetWidth;
   document.getElementById('<%=params[:container]%>').appendChild(iframe);
   var tf = document.getElementById(frame_id);
@@ -15,7 +15,7 @@
   tf.style.padding = '0';
   tf.border = 0;
 <%else%>
-  document.write("<div id=\"speakerdeck_presentation_wrapper_<%= @courseware.id %>\"><iframe style=\"border:0; padding:0; margin:0; background:transparent;\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\" frameBorder=\"0\" allowTransparency=\"true\" id=\"presentation_frame_<%= @courseware.id %>\" src=\"/embed/<%= @courseware.id%>?slide=1\" width=\"\" height=\"\"></iframe>\n</div>");
+  document.write("<div id=\"speakerdeck_presentation_wrapper_<%= @courseware.id %>\"><iframe style=\"border:0; padding:0; margin:0; background:transparent;\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\" frameBorder=\"0\" allowTransparency=\"true\" id=\"presentation_frame_<%= @courseware.id %>\" src=\"/embed/<%= @courseware.id%>?slide=1&preview=1\" width=\"\" height=\"\"></iframe>\n</div>");
 
   var width = document.getElementById('speakerdeck_presentation_wrapper_<%= @courseware.id %>').offsetWidth;
 <%end%>
