--- a/trunk/app/views/coursewares/new.html.erb
+++ b/trunk/app/views/coursewares/new.html.erb
@@ -8,8 +8,8 @@
         <div class="primary_info" id="biaozhu_cw" style="display:none">
           <h1>标注课件信息</h1>
 
-  <p><label for="presentation_name">所属课程</label> <input class="text" id="presentation_course_long_name" name="presentation[course_long_name]" size="30" type="text" placeholder="例如：[北京师范大学]张英伯:代数学基础"/></p>
-  <p><label for="presentation_name">标题</label> <input class="text" id="presentation_title" name="presentation[title]" size="30" type="text" placeholder="例如：复习大纲"/></p>
+  <p><label for="presentation_course_long_name">所属课程</label> <input class="text" id="presentation_course_long_name" name="presentation[course_long_name]" size="30" type="text" placeholder="例如：[北京师范大学]张英伯:代数学基础"/></p>
+  <p><label for="presentation_title">标题</label> <input class="text" id="presentation_title" name="presentation[title]" size="30" type="text" placeholder="例如：复习大纲"/></p>
   <p class="submit">
       <button class="primary">保存课件信息</button>
       <span class="button primary cancel">请先完成文件上传</span>
@@ -18,33 +18,7 @@
 
         </div>
         <div class="secondary_info">
-
-  <div id="upload">
-    <h1>请上传课件的PDF版</h1>
-    <div class="steps">
-      <div class="presentation_wrapper">
-        <div class="step">
-          <div id="uploader" data-session-key-name="_secure_speakerd_session" data-session-key="BAh7CEkiD3Nlc3Npb25faWQGOgZFRkkiJTk3MzcxNDdmOGI3ZDI1ZjIyYzAzMDFhMWRkMzI2MmM4BjsAVEkiEF9jc3JmX3Rva2VuBjsARkkiMVRZdFFsdEJzMXBiRkxhUktIbW5lNnNCL0hIendQaGRLSnJIbU8rRTBkU2s9BjsARkkiDHVzZXJfaWQGOwBGSSIdNGYyZmI2NGUwZjZmMjcwMDFmMDEwYTNhBjsARg%3D%3D--77268f8e0eab9ba9e8d742ed1b0d5fe29c81192d">
-            <input accept="application/pdf" id="presentation_pdf" name="presentation[pdf]" type="file" />
-          </div>
-        </div>
-        <h1>发布进度</h1>
-        <div class="step">
-          <div id="upload_progress" class="progress_bar inactive">
-            <div class="progress_title">上传进度</div>
-            <div class="progress_meter"></div>
-          </div>
-        </div>
-        <div class="step">
-          <div id="process_progress" class="progress_bar inactive">
-            <div class="progress_title">转码进度</div>
-            <div class="progress_meter"></div>
-          </div>
-        </div>
-      </div>
-    </div><!-- /steps -->
-    <p id="ok_to_leave" style="display:none">此时已可安全地离开此页面，我们将在后台自动处理您的课件。</p>
-  </div>
+<%= render 'upload' %>
 
         </div>
       </div>
