--- a/trunk/app/views/coursewares/show.html.erb
+++ b/trunk/app/views/coursewares/show.html.erb
@@ -1,7 +1,7 @@
 <div class="__sdk"><%# todo: 710px ..ratio %>
 <section id="presentation" class="feature">
   <div class="wrapper">
-    <h1 style="<%if @courseware.thin?%>width:516px<%end%>">
+    <h1>
       <%if @cws%>第<%=@courseware.courseware_series_no%>集. <%end%>
       <%= @courseware.title %>
       <%if @cws%>
@@ -13,6 +13,9 @@
         )
         </span>
       <%end%>
+      <% if owner? @courseware %>
+        <a id="edit_presentation" class="grey" href="<%= edit_courseware_path(@courseware) %>">编辑课件</a>
+      <% end %>
     </h1>
 
     <% if @courseware.thin? %>
@@ -20,19 +23,16 @@
       <%= render :partial => 'presenter', :locals => {user:@courseware.user} %>
     </div>
     
-    <div class="extras" style="float:right;margin-top:-26px">
-      <div class="edit_header">
-        <a id="edit_presentation" class="grey" href="/u/pmq20/p/chemistry/edit">Edit</a>
-      </div>
-      <ul class="delimited share" style="margin-bottom:0">
-        <li class="dianjiliang">点击量 <a href="#watch-view-count"><%= number_with_delimiter @courseware.views_count %> 次</a></li>
+    <div class="extras" style="float:right;margin-top:-16px">
+      <ul class="delimited share" style="margin-bottom:0;border-top:none">
+        <li class="dianjiliang" style="border-top:none">点击量 <a href="#watch-view-count"><%= number_with_delimiter @courseware.views_count %> 次</a></li>
         <li style=""><a href="<%= download_courseware_path @courseware %>" target="_blank" class="grey" id="share_pdf">下载源文件</a></li>
       </ul>
     </div>
     
-    <div class="extras" style="float:right;margin-right:18px;margin-top:-26px">
-      <ul class="delimited" style="margin-bottom:0">
-        <li class="like">
+    <div class="extras" style="float:right;margin-right:18px;margin-top:-16px">
+      <ul class="delimited" style="margin-bottom:0;border-top:none">
+        <li class="like" style="border-top:none">
           <a href="javascript:void(0)" class="like grey" data-method="post" data-remote="true" rel="nofollow" id="weizuozhefasongganxie">为作者发送感谢</a>
           <a href="#fans" class="likes"><span id="weizuozhefasongganxie2"><%= @courseware.thanks_count %></span> 感谢</a>
         </li>
