reupload 完成，但需要将来垃圾清理reivision

--- a/trunk/app/views/coursewares/_upload.html.erb
+++ b/trunk/app/views/coursewares/_upload.html.erb
@@ -1,4 +1,5 @@
 <div id="upload">
+  <%= yield :upload_armpit%>
   <h1>请上传课件的PDF版</h1>
   <div class="steps">
     <div class="presentation_wrapper">
@@ -22,5 +23,5 @@
       </div>
     </div>
   </div><!-- /steps -->
-  <p id="ok_to_leave" style="display:none">此时已可安全地离开此页面，我们将在后台自动处理您的课件。</p>
+  <p id="ok_to_leave" style="display:none">此时您可安全地离开此页面，我们将在云端自动处理您的课件。</p>
 </div>
