--- a/trunk/app/views/user_mailer/be_followed.html.erb
+++ b/trunk/app/views/user_mailer/be_followed.html.erb
@@ -3,9 +3,9 @@
 		<div class="pictureItem" style="font-size:12x;margin:5px 0;">
 			<h6 style="font:bold 14px/2em simsun;margin:0;"><%= link_to @follower.name, user_url(@follower.slug), :target=>'_blank', :style=>'color:#360;font-weight:bold;font-size:14px;text-decoration:none;' %>在Kejian.TV上关注了你</h6>
       <% if !@follower.avatar.blank? %>
-        <%= image_tag('http://wendao.zhaopin.com'+@follower.avatar.mid.url, :style => "width:50px;height:50px;float:left;margin-right:10px;") %>
+        <img src="<%= @follower.avatar.mid.url%>" style="width:50px;height:50px;float:left;margin-right:10px;" />
       <% else %>
-        <%= image_tag("http://wendao.zhaopin.com/assets/avatar/mid.jpg", :style => "width:50px;height:50px;float:left;margin-right:10px;") %>
+        <img src="/defaults/avatar/mid.jpg" style="width:50px;height:50px;float:left;margin-right:10px;" />
       <% end %>
 			<p style="margin:0;padding:0;">
         <%= link_to @follower.name, user_url(@follower.slug), :target=>'_blank', :style=>'color:#360;font-weight:bold;font-size:14px;text-decoration:none;' %><br>
