--- a/trunk/app/views/users/_head.html.erb
+++ b/trunk/app/views/users/_head.html.erb
@@ -1,7 +1,7 @@
 <!-- 主题内容头 -->
 <header class="userHeader mainContentHeader clearfix">
   <figure class="avatar">
-    <%= image_tag(user.avatar.normal.url,class:'imgHead',width:100,height:100) %>
+    <img src="<%=user.avatar.normal.url%>" class="imgHead" width="100" height="100">
       <% if current_user and current_user.id==user.id %>
         <div class="edit hide" ><a class="changeUserHead">修改头像</a></div>
       <% end %>
@@ -10,7 +10,7 @@
       <header>修改头像 <a class="close" href="javascript:void(0);"></a></header> 
       <%= simple_form_for(@user,:class => "form", :url => registration_path(@user), :html => { :method => :put, :enctype =>  "multipart/form-data" }) do |f| %>
         <section class="setupProfile"> 
-          <figure><%= image_tag(user.avatar.normal.url) %></figure> 
+          <figure><img src="<%= (user.avatar.normal.url) %>" /></figure> 
           <div id="file_wrapper">
             <div id="file_faker">
               <input id="file_uploader_text" type="text" />
